# skills

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  evals-results-full.md  pyproject.toml
.cursor-plugin/: marketplace.json  plugin.json
.semaphore/: evals.yml  semaphore.yml
docker/: Dockerfile
evals/: case_filter.py  case_logger.py  cases.py  harness.py  report.py  runner.py  tool_registry.py
evals/evaluators/: __init__.py  bash_command_called.py  bash_commands_in_order.py  canvas_has_node.py  canvas_has_trigger.py  canvas_has_workflow.py  canvas_shape.py  file_content.py  file_written.py  refused_because_missing_cli.py  response_mentions.py  yaml_validates_canvas.py
scripts/: bootstrap-token.sh  validate.mjs
skills/superplane-api/: SKILL.md
skills/superplane-app-builder/: SKILL.md
skills/superplane-app-builder/references/: components-and-triggers.md  daytona.md  github.md  sentry.md
skills/superplane-canvas-builder/: SKILL.md
skills/superplane-canvas-builder/references/: canvas-patterns.md  components-and-triggers.md  daytona.md  github.md  sentry.md
skills/superplane-cli/: SKILL.md
skills/superplane-cli/references/: canvas-yaml-spec.md  console-yaml-spec.md
skills/superplane-dashboard-and-widgets/: SKILL.md
skills/superplane-expressions/: SKILL.md
skills/superplane-expressions/references/: expr-functions.md
skills/superplane-integrations/: SKILL.md
skills/superplane-integrations/references/: provider-catalog.md
skills/superplane-monitor/: SKILL.md
skills/superplane-troubleshoot/: SKILL.md
(+3 files in other folders)
