[project]
name = "skills-evals"
version = "0.1.0"
description = "Regression evals for SuperPlane Claude Code skills"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "pydantic-evals>=1.68.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.23.0",
    "anyio>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
